# URL-shortener

./: .env.template  README.md  docker-compose.yml
app/: .env.template  Dockerfile  entrypoint.sh  pyproject.toml
app/app/: settings.py  urls.py
app/shortener/: models.py  urls.py  views.py
app/shortener/migrations/: 0001_initial.py  0002_remove_urlmodel_id_alter_urlmodel_long_url.py
app/shortener/templates/: base.html  footer.html  index.html
app/utils/: misc.py
