[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = ["Guilherme <guimorone@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.4"
environs = "^11.0.0"
psycopg2-binary = "^2.9.9"
whitenoise = "^6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
